chore: fix web config

--- a/.app-config.meta.yml
+++ b/.app-config.meta.yml
@@ -1,4 +1,4 @@
 generate:
   - type: 'ts'
     name: 'Config'
-    file: 'src/@types/app-config/index.d.ts'
+    file: './services/core-service/src/@types/app-config/index.d.ts'
