--- a/services/core-service/package.json
+++ b/services/core-service/package.json
@@ -21,7 +21,7 @@
     "@koa/cors": "^3.3.0",
     "@lcdev/router": "^1.5.0",
     "axios": "^0.27.2",
-    "@lcdev/app-config": "^2.0.0-alpha.11",
+    "@app-config/main": "2.8.7",
     "knex": "^0.21.5",
     "koa": "^2.13.4",
     "path": "^0.12.7",
